# ai-assisted-insights-agent

./: .env.example  CONTRIBUTING.md  DEMO_RESULTS.md  DEPLOYMENT.md  ENHANCEMENTS.md  LICENSE  NEXT_STEPS.md  README.md  REAL_DATA_GUIDE.md  config.yaml  config_kaggle.yaml  config_streaming.yaml  pyproject.toml  update_references.ps1
.github/workflows/: ci.yml
01_docs/: CONNECTING_TO_DATA.md
06_configs/: config_kaggle.yaml  config_streaming.yaml
data/: sample_data.csv  streaming_services_2025.sql
docs/: API.md  ARCHITECTURE.md  CLAUDE_DESKTOP_SETUP.md  CLI_REFERENCE.md
examples/: README.md  USAGE.md
examples/claude-desktop/: README.md
examples/jupyter/: README.md
examples/python-client/: README.md  example.py
examples/streaming-demo/: README.md  generate_data.py
insights_agent/: cli.py  config.py  history.py  server.py
tests/: __init__.py  conftest.py  test_server.py  test_tools.py
